maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:24: error: '(' expected but '{' found.
  }while{T(positionBuggleX + positionBuggleY)}
        ^